# sonic-stp

./: LICENSE  Makefile.am  README.md  azure-pipelines.yml  configure.ac  dummy_test_file.txt  package.cfg  stpd_main.cpp
.azure-pipelines/: build-template.yml
.github/: copilot-instructions.md
debian/: changelog  control  rules
include/: Makefile.am  l2.h  mstp.h  mstp_common.h  mstp_externs.h  stp.h  stp_common.h  stp_dbsync.h  stp_debug.h  stp_externs.h  stp_inc.h  stp_intf.h  stp_ipc.h  stp_main.h  stp_netlink.h  stp_timer.h
lib/: Makefile.am  applog.c  applog.h  bitmap.c  bitmap.h  vlan_util.c
mstp/: mstp.c  mstp_data.c  mstp_debug.c  mstp_lib.c  mstp_mgr.c  mstp_pim.c  mstp_ppm.c  mstp_prs.c  mstp_prt.c  mstp_prx.c  mstp_pst.c  mstp_ptx.c  mstp_tcm.c  mstp_util.c
scripts/: Makefile
scripts/init/: sonic-ip.service
scripts/lib/python/: dn_base_ip_tool.py  ifindex_utils.py
sonic/: cps_api_interface_types.h  cps_api_route.h  db_api_linux_init.h  db_linux_event_register.h  ds_api_linux_interface.h  ds_api_linux_neigh.h  ds_api_linux_route.h  nas_linux_l2.h  nas_os_interface.h  nas_os_l3.h  nas_os_lag.h  nas_os_vlan.h  net_publish.h
sonic/private/: nas_nlmsg.h  nas_nlmsg_object_utils.h  nas_os_if_priv.h  nas_os_int_utils.h  nas_os_vlan_utils.h  netlink_tools.h  os_if_utils.h  standard_netlink_requests.h
src/: db_linux_interface.c  db_linux_route.c  ds_api_linux_neigh.c  ds_interface_name_tools.c  ds_linux_init.c  nas_os_int_utils.c  nas_os_interface.cpp  nas_os_ip.cpp  nas_os_l3.c  nas_os_lag.c  nas_os_mac.cpp  nas_os_stg.c  nas_os_vlan.c  nas_os_vlan_utils.c  net_main.cpp  netlink_tools.c
src/if/: os_interface.cpp  os_interface_cache.cpp  os_interface_lag.cpp  os_interface_stg.cpp  os_interface_vlan.cpp
src/unit_test/: cps_api_interface_unittest.c  cps_api_route_unittest.cpp  db_unit_test.cpp  ds_api_linux_neigh_unittest.cpp  ds_api_linux_route_unittest.cpp  nas_linux_stg_unittest.cpp  nas_os_l3_unittest.cpp  nas_os_mac_unittest.cpp
src/unit_test/scripts/: nas_os_ip.py  nas_os_ip.sh
stp/: Makefile.am  stp.c  stp_data.c  stp_debug.c  stp_intf.c  stp_main.c  stp_mgr.c  stp_netlink.c  stp_pkt.c  stp_timer.c  stp_util.c
stpctl/: Makefile.am  stpctl.c  stpctl.h
stpsync/: stp_sync.cpp  stp_sync.h
